test/error/StSwitchCaseEndOfFile.ci
public static class Test
{
	public static bool Run()
	{
		int x = 42;
		switch (x) {
		case 5: //ERROR: Expected RightBrace, got EndOfFile //ERROR: Expected RightBrace, got EndOfFile //ERROR: Expected RightBrace, got EndOfFile